style: 메서드 명 가독성위해 수정